Added styled components dependency and added a styled component to app.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-.App {
+/* .App {
   text-align: center;
 
-}
+} */
 
 img{
   max-width: 900px;
 }
 
-.choose-date{
+/* .choose-date{
   margin-top: 50px;
   border-top: 2px dashed black;
-}
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
